chore: clean up publishing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cns-fn",
-  "version": "1.0.0",
+  "name": "@soundslikeodd/cns-fn",
+  "version": "0.0.1",
   "description": "Simple function for managing class names.",
   "main": "commonjs/index.js",
   "module": "./src/index.js",
