--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/soundslikeodd/cns-fn.git"
+    "url": "git+https://github.com/soundslikeodd/cns-fn.git"
   },
   "scripts": {
     "prepack": "babel ./src -d commonjs",
